--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="main-container">
     <div class="cards sedan">
       <div class="cards-components">
-        <img src="/images/icon-sedans.svg" alt="Sedan car logo">
+        <img src="images/icon-sedans.svg" alt="Sedan car logo">
         <h2>Sedans</h2>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
         <button class="btn">Learn More</button>
@@ -32,7 +32,7 @@
 
     <div class="cards suv">
       <div class="cards-components">
-        <img src="/images/icon-suvs.svg" alt="SUV car logo">
+        <img src="images/icon-suvs.svg" alt="SUV car logo">
         <h2>SUVs</h2>
         <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
         <button class="btn">Learn More</button>
@@ -41,7 +41,7 @@
 
     <div class="cards luxury">
       <div class="cards-components">
-        <img src="/images/icon-luxury.svg" alt="Luxury car logo">
+        <img src="images/icon-luxury.svg" alt="Luxury car logo">
         <h2>Luxury</h2>
         <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
         <button class="btn">Learn More</button>
